fix add product and product page

--- a/src/app/add-product/add-product.html
+++ b/src/app/add-product/add-product.html
@@ -1,3 +1,29 @@
+<div class="w-full bg-[#F7F7F7] shadow-lg px-6 py-4 flex items-center justify-between">
+  <div>
+    <h1 class="text-xl font-semibold">Create Product</h1>
+    <p class="text-lg text-gray-500 -mt-1">Create new Product</p>
+  </div>
+
+  <div class="flex items-center gap-3">
+    <a
+      href="/product/add-product"
+      class="cursor-pointer border px-3 py-2 rounded-md"
+    >
+      ⟳
+    </a>
+
+    <div class="cursor-pointer border px-3 py-2 rounded-md">^</div>
+
+    <a
+      href="/product"
+      class="cursor-pointer bg-blue-900 hover:bg-blue-800 text-white px-4 py-2 rounded-md flex items-center gap-2"
+    >
+      Back to Products
+    </a>
+  </div>
+</div>
+
+
 <!-- Product Form Section -->
 <div class="w-full">
   <div class="border rounded-lg bg-white p-6">
